styles.css
/* ... */
#play-triangle {
  width: 0px;
  height: 0px;
  border-style: solid;
  border-width: 20px 0px 20px 40px;
  position: absolute;
  z-index: 7;
  top: 30px;
  right: 30px;
  bottom: 30px;
  left: 30px;
    border-top: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-left: 30px solid white;
  margin: auto;
}

.play-triangle:focus {
  outline: 0;
  border: 1px solid hsl(210, 58%, 69%);
  box-shadow: 0 0 0 3px hsla(210, 76%, 57%, 0.5);
}

/* ---- GALLERY AND EVENT SECTION ----*/

.gallery-and-events {
  background-color: #F9CE4A
}
.events-list {
  width: 100%;
  height: 291px;
  overflow: auto;
  margin-top: 0px;
  border: 3px solid black;
}

.gallery{
  margin-top: 50px;
}

* {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}
.caption > h2{
  padding-top:30px;
}

.gallerycontainer {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

@media (min-width: 768px) {
  .gallerycontainer {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .gallerycontainer {
    width: 970px;
  }
}
@media (min-width: 1230px) {
  .gallerycontainer {
    width: 1200px;
  }
}

.row {
  margin-right: -15px;
  margin-left: -15px;
}


@media (min-width: 992px) {
  .gallery-event-section {
    float: left;
  }
  .gallery-event-section {
    width: 50%;
  }
}

.gallery-events-section {
  width: 100%;
  height: auto;
  background-color: #F9CE4A;
  text-align: center;
  vertical-align: middle;
  /*padding: 25px;*/
  /*padding-top: 50px;*/
}

 .gallery-event-section {
  position: relative;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;

}
.gallery-event-section > h2 {
  text-align: center;
  padding: 0;
}

.gallery-and-events > h2 {
  text-align: center;
  padding: 0;
}

.event {
  width: 100%;
  margin-left: -20px;
  margin-top: 10px;
  margin-bottom: 5px;
  width: 90%;
  text-align: left;
  list-style-type: none;
  border-bottom: 2px solid black;
}

.gallery-events {
  width: 500px;
  height: 300px;
  border: 5px solid black;
  display: inline-block;
  margin: auto;
  text-align: center;
  vertical-align: middle;
  margin: 20px 20px 100px 20px;
}

.gallery-events-section-list {
  display: block;
}





/* Meet the Teams CSS */
/* New Carousel and card CSS */
.teamslider{
		width: 850px;
		height: 256px;
		margin: 10px auto;
		background: transparent;
	}
	.teamslider img{
		position: center;
	}

	#mainwrapper {
	font: 10pt normal Arial, sans-serif;
	height: auto;
	text-align: center;

}

	#mainwrapper .box {
		border: 2px solid #fff;
		cursor: pointer;
		height: 256px;
		float: left;

		position: relative;
		overflow: hidden;
		width: 256px;
			-webkit-box-shadow: 1px 1px 1px 1px #ccc;
			-moz-box-shadow: 1px 1px 1px 1px #ccc;
			box-shadow: 1px 1px 1px 1px #ccc;
	}



	#mainwrapper .box .caption {
		background-color: #585858;
		position: absolute;
		color: #fff;
		z-index: 100;
			-webkit-transition: all 500ms ease-out;
			-moz-transition: all 500ms ease-out;
			-o-transition: all 500ms ease-out;
			-ms-transition: all 500ms ease-out;
			transition: all 500ms ease-out;
		left: 0;
	}

	#mainwrapper .box .simple-caption {
		height: 250px;
		width: 256px;
		display: block;
		bottom: -200px;
		line-height: 25pt;
		text-align: center;
	}

	#mainwrapper .box:hover .simple-caption {
		-moz-transform: translateY(-50%);
		-o-transform: translateY(-50%);
		-webkit-transform: translateY(-50%);
		opacity: 1;
		transform: translateY(-50%);
	}
    #arrow{
		margin-left: 43%;
	}

	#team_titles{
	font: 12pt normal Arial, sans-serif;
	text-transform: uppercase;
	font-weight: bold;
	}

.modalbgcolor {
  background-color: #4eaab0;
}
.rectangle2{
  height:auto;
  width:90%;
  background:#000000;
  position:center;
  left:auto;
  top:auto;
  margin: auto;
  font-family: 'Bitter', 'Trebuchet MS', Cambria;
  z-index: 1;
}

.rectangle1{
  height: auto;
  width:90%;
  background:white;
  border-radius: 0px;
  margin: auto;
  margin-bottom: 15%;
  font-family: 'Bitter', 'Trebuchet MS', Cambria;
  /* text-align: justify;*/
}

.team{
  background-color:#000000;
  overflow: visable;
  padding: 0px;
  margin: 0px;
  padding-bottom: 3%;
}

.v-separator
{
    content: "";
    display: inline-block;
    width: 0px;

    border-right: 1px solid #fafafa;
    border-left: 1px solid #b4b4b4;
    padding: 0;
}

.description2{
  text-align: justify;
  font-size: 12px;
  line-height: 200%;
  width:68%;
  margin-left: 35%;
  margin-top: -45%;
  letter-spacing: 2px;

}

.lenzo {
  font-family: 'Bitter', 'Trebuchet MS', Cambria;
  font-size: 220%;
  font-weight: bold;
  color: #ffffff;
  padding-left:43%;
  word-spacing: 13px;
}

.regdir {
  font-family: 'Bitter', 'Trebuchet MS', Cambria;
  font-size: 180%;
  font-weight: normal;
  color: #ffffff;
  padding-left:44%;
  word-spacing: 5px;
}

.img-responsive {
  color: #fff;
  margin-top: -40%;
  margin-left: 22%;
  overflow: visible;
  /*float: left;*/
}

.description1{
  text-align: center;
    font-size: 14px;
    width: 38%;

    /* display: inline-block; */
    margin-top: initial;
    margin-left: -4%;
	word-spacing: 15px;
	letter-spacing: 3px;

}

.description {
  width: 100%;
  /*-webkit-columns-count: 2;
  -moz-column-count: 2;
  column-count: 2; */
  /*-webkit-columns: auto 2;
  -moz-columns: auto 2;
  columns: auto 2;*/
  padding:3%;
  font-weight: 900;
  height: auto;
  margin-bottom: -4%;
  /*text-align: justify;*/
}

.contentborder{

  background-color: #4eaab0;
  border: 5px solid;
  border-radius: 10px;
  border-color: #fdcc0a;
}

.contenttext{
  background-color: #4eaab0;
  text-align: justify;
  font-family: 'Bitter', 'Trebuchet MS', Cambria;
  font-size: 100%;
  color: black;
}

.teamname {
  font-family: 'Bitter', 'Trebuchet MS', Cambria;
  text-align: center;
  font-size: 200%;
  font-weight: bold;
  color: black;
}

.teamleader {
  font-family: 'Bitter', 'Trebuchet MS', Cambria;
  font-size: 170%;
  font-weight: bold;
  text-align: center;
  color: black;
}
/* ... */

